bpo-43368: Fix fetching empty bytes in sqlite3 (GH-24706)

Regression introduced in 1758e08439e7a3da87c06050bee54b7bd953a918.